--- a/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/packages.config
+++ b/src/server/Pg.LetsExercise/Pg.LetsExercise.Domain.Tests/packages.config
@@ -18,8 +18,11 @@
   <package id="System.Text.Json" version="8.0.5" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="xunit" version="2.6.3" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net462" />
-  <package id="xunit.assert" version="2.9.3" targetFramework="net462" />
-  <package id="xunit.extensibility.core" version="2.9.3" targetFramework="net462" />
-  <package id="xunit.runner.visualstudio" version="2.5.5" targetFramework="net462" developmentDependency="true" />
+  <package id="xunit.analyzers" version="1.7.0" targetFramework="net462" />
+  <package id="xunit.assert" version="2.6.3" targetFramework="net462" />
+  <package id="xunit.core" version="2.6.3" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.6.3" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.6.3" targetFramework="net462" />
 </packages>
